fixed excess gap between cover photo and work index

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -36,7 +36,7 @@
         grid-template-areas:
             "a";
         flex-flow: column nowrap;
-        height: 100vh;
+        height: 95vh;
         width: 100vw;
     }
     #cover-photo {
